--- a/assets/scss/components/_logo.scss
+++ b/assets/scss/components/_logo.scss
@@ -1,8 +1,8 @@
 .logo {
   display: none;
+  text-transform: uppercase;
   @include media-breakpoint-up(sm) {
     display: block;
-    width: 120px;
   }
   img {
     width: 100%;
