--- a/layouts/charters/list.html
+++ b/layouts/charters/list.html
@@ -1,5 +1,5 @@
 {{ define "header_css" }}{{ end }}
-{{ define "body_classes" }}page-services-list{{ end }}
+{{ define "body_classes" }}page-charters-list{{ end }}
 {{ define "header_classes" }}{{ end }}
 
 {{ define "main" }}
