--- a/layouts/reviews/summary.html
+++ b/layouts/reviews/summary.html
@@ -1,8 +1,8 @@
 <div class="review review-summary">
-  <div class="review-content">
+  <blockquote class="review-content">
     {{ .Content }}
-  </div>
+  </blockquote>
   <div class="review-author">
-    — {{ .Params.Author }}
+    {{ .Params.Author }}
   </div>
 </div>
