--- a/layouts/index.html
+++ b/layouts/index.html
@@ -29,7 +29,9 @@
       <div class="col-12 col-md-6 offset-md-6 whitebox">
         <h2 class="text-primary text-capitalize">{{ .Title }}</h2>
         <p>{{ .Content }}</p>
+        {{ if .Params.buttonLink }}
         <a class="button" href="{{ .Params.buttonLink | relURL }}">{{ .Params.button }}</a>
+        {{ end }}
       </div>
     </div>
   </div>
@@ -64,7 +66,9 @@
       <div class="col-12 col-md-8 text-center text-white">
         <h2>{{ .Title }}</h2>
         <p>{{ .Content }}</p>
+        {{ if .Params.buttonLink }}
         <a class="button button-white" href="{{ .Params.buttonLink | relURL }}">{{ .Params.button }}</a>
+        {{ end }}
       </div>
     </div>
   </div>
