--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -19,6 +19,7 @@ $white: #ffffff;
 $black: rgb(51, 51, 51);
 $primary: rgb(11, 72, 107);
 $secondary: #43454d;
+$cta: rgb(255, 165, 0);
 
 // Links
 $link-color: $primary;
