--- a/layouts/partials/hero-image-setheight.html
+++ b/layouts/partials/hero-image-setheight.html
@@ -1,10 +1,20 @@
-<div id="hero" class="hero-image hero-image-setheight" style="background-image: url('{{ .background | relURL }}')">
+<div id="hero" class="hero-image hero-image-setheight bg-position-{{ .backgroundPosition | default "center"}}" style="background-image: url('{{ .background | relURL }}');">
   <div class="container ">
     <div class="hero-text">
-      <span class="hero-section">{{ .section }}</span>
+      {{ if .parent.Permalink }}
+      <a class="text-white" href="{{ .parent.Permalink }}">
+      {{ end }}
+        <span class="hero-section">{{ .section }}</span>
+      {{ if .parent.Permalink }}
+      </a>
+      {{ end }}
       <h1>{{ .heading }}</h1>
       <p>{{ .subheading }}</p>
+      {{ if .button }}
+      <div class="calltoaction">
+        <a class="button button-cta" href="{{ .button.link | relURL }}">{{ .button.text }}</a>
+      </div>
+      {{ end }}
     </div>
   </div>
 </div>
-  
