Fix vertical alignment on footer copyright

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,7 +6,7 @@
           <ul class="footer-menu">
             <li><a href="{{ .Site.BaseURL }}">Home</a></li>
             <li><a href="{{ .Site.BaseURL }}contact">Contact</a></li>
-            <li class="copyright">© {{ now.Format "2006" }} {{.Site.Title}}</li>
+            <li><span class="copyright">© {{ now.Format "2006" }} {{.Site.Title}}</span></li>
           </ul>
         </div>
       </div>
