--- a/layouts/partials/sub-footer.html
+++ b/layouts/partials/sub-footer.html
@@ -4,14 +4,18 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <ul>
-            <li><strong>Phone: </strong>{{ .Site.Data.contact.phone }}</li>
-            <li><strong>Email: </strong><a href="mailto:{{ .Site.Data.contact.email }}">
-                {{ .Site.Data.contact.email }}</a></li>
-          </ul>
-          <ul>
-            <!--
-            <li class="zerostatic"><a href="https://www.zerostatic.io">www.zerostatic.io</a></li>
-            -->
+            <li>
+              <strong>Phone:</strong>
+              <a href="tel:{{ .Site.Data.contact.phone }}">
+                {{ .Site.Data.contact.phone }}
+              </a>
+            </li>
+            <li>
+              <strong>Email: </strong>
+              <a href="mailto:{{ .Site.Data.contact.email }}">
+                {{ .Site.Data.contact.email }}
+              </a>
+            </li>
           </ul>
         </div>
       </div>
