Refine how About page displays subpages

--- a/assets/scss/components/_page.scss
+++ b/assets/scss/components/_page.scss
@@ -5,4 +5,14 @@
   .wrapper {
     flex: 1;
   }
+  ul,
+  ol {
+    margin: 0 0 1rem 2rem;
+  }
+  ul {
+    list-style: disc;
+  }
+  ol {
+    list-style: gregorian;
+  }
 }
