--- a/layouts/pages/about.html
+++ b/layouts/pages/about.html
@@ -3,25 +3,26 @@
 {{ define "header_classes" }}{{ end }}
 
 {{ define "main" }}
-{{ partial "hero-image-setheight.html" (dict "background" .Params.heroBackground "heading" .Params.heroHeading "subheading" .Params.heroSubHeading "content" .)}}
+{{ partial "hero-image-setheight.html" (dict "background" .Params.heroBackground "backgroundPosition" .Params.heroBackgroundPosition "heading" .Params.heroHeading "subheading" .Params.heroSubHeading "content" .)}}
 
 {{ $headless := .Site.GetPage "/pages/about" }}
 {{ $subpages := $headless.Resources.ByType "page" }}
 {{ $subpages := sort $subpages ".Params.weight" }}
 {{ range $subpages }}
-<div class="strip bg-cover bg-position-top bg-overlay" style="background-image: url('{{ .Params.background | relURL }}');">
-  <div class="container pt-17 pb-17">
+  {{ if .Params.heroBackground }}
+  {{ partial "hero-image-setheight.html" (dict "background" .Params.heroBackground "heading" .Params.heroHeading "subheading" .Params.heroSubHeading "content" .)}}
+  {{ end }}
+
+  <div class="container pt-15 pb-15">
     <div class="row">
-      <div class="col-12 col-md-6 {{ if eq .Params.align "right" }}offset-md-6{{ end }}">
-        <h2 class="text-primary text-capitalize">{{ .Title }}</h2>
-        {{ .Content }}
-        {{ if .Params.button }}
-          <a class="button" href="{{ .Params.buttonLink | relURL }}">{{ .Params.button }}</a>
-        {{ end }}
+      <div class="col-12">
+          {{ .Content }}
+          {{ if .Params.button }}
+          <a class="button button-primary" href="{{ .Params.buttonLink | relURL }}">{{ .Params.button}}</a>
+          {{ end }}
       </div>
     </div>
   </div>
-</div>
 {{ end }}
 
 {{ .Content }}
