--- a/layouts/pages/about.html
+++ b/layouts/pages/about.html
@@ -10,7 +10,7 @@
 {{ $subpages := sort $subpages ".Params.weight" }}
 {{ range $subpages }}
   {{ if .Params.heroBackground }}
-  {{ partial "hero-image-setheight.html" (dict "background" .Params.heroBackground "heading" .Params.heroHeading "subheading" .Params.heroSubHeading "content" .)}}
+  {{ partial "hero-image-setheight.html" (dict "background" .Params.heroBackground "backgroundPosition" .Params.heroBackgroundPosition "heading" .Params.heroHeading "subheading" .Params.heroSubHeading "content" .)}}
   {{ end }}
 
   <div class="container pt-15 pb-15">
