Darken CTA and define buttons on About as CTAs

--- a/layouts/pages/about.html
+++ b/layouts/pages/about.html
@@ -18,7 +18,7 @@
       <div class="col-12">
           {{ .Content }}
           {{ if .Params.button }}
-          <a class="button button-primary" href="{{ .Params.buttonLink | relURL }}">{{ .Params.button}}</a>
+          <a class="button button-cta" href="{{ .Params.buttonLink | relURL }}">{{ .Params.button}}</a>
           {{ end }}
       </div>
     </div>
