--- a/layouts/work/single.html
+++ b/layouts/work/single.html
@@ -3,7 +3,8 @@
 {{ define "header_classes" }}{{ end }}
 
 {{ define "main" }}
-{{ partial "hero-image-setheight.html" (dict "background" .Params.heroBackground "heading" .Params.heroHeading "subheading" .Params.heroSubHeading "section" .Section "content" .)}}
+{{ partial "hero-image-setheight.html" (dict "background" .Params.heroBackground "heading" .Params.heroHeading
+"subheading" .Params.heroSubHeading "section" .Section "content" .)}}
 <div class="container pt-4 pt-md-10 pb-4 pb-md-10">
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
@@ -16,24 +17,13 @@
       <h2 class="mb-2 text-uppercase">Gallery</h2>
       <div class="masonry">
         {{ range .Params.images }}
-          <div class="work-image item">
-            <img src="{{ . | relURL }}"/>
-          </div>
+        <div class="work-image item">
+          <img src="{{ . | relURL }}" />
+        </div>
         {{ end }}
       </div>
     </div>
     {{ end }}
   </div>
 </div>
-{{ end }}
-
-{{ define "footer_js" }}
-{{ $library := resources.Get "js/libs/library.js" }}
-{{ $charters := resources.Get "js/pages/charters.js" }}
-{{ $chartersJS := slice $library $charters |resources.Concat "js/charters.js" }}
-{{ if .Site.IsServer }}
-  <script type="text/javascript" src="{{ $chartersJS.RelPermalink }}"></script>
-  {{ else }}
-  <script type="text/javascript" src="{{ ($chartersJS | minify | fingerprint).RelPermalink }}"></script>
-  {{ end }}
 {{ end }}
