--- a/layouts/contact/contact.html
+++ b/layouts/contact/contact.html
@@ -18,7 +18,7 @@
   </div>
   <div class="row">
     <div class="col-12 col-md-8 mb-2">
-      <form name="contact" class="contact-form width-normal" action="thank-you" method="POST" data-netlify="true">
+      <form name="contact" action="thank-you" method="POST" data-netlify="true">
         <div class="form-group">
           <label for="contactName">Name</label>
           <input id="contactName" name="Name" type="text" placeholder="Davy Jones" class="form-control" required="" />
