Add styling for inline images

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -62,6 +62,7 @@
 @import "components/feature";
 @import "components/hero-image";
 @import "components/bg";
+@import "components/images";
 
 // Pages
 @import "pages/charters/page-charters-list";
