Support a super header;

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -63,6 +63,7 @@
 @import "components/hero-image";
 @import "components/bg";
 @import "components/images";
+@import "components/super_header";
 
 // Pages
 @import "pages/charters/page-charters-list";
