Switch reviews to 2-col layout
Other enhancements include better markup, including citation.

--- a/assets/scss/pages/reviews/_review-summary.scss
+++ b/assets/scss/pages/reviews/_review-summary.scss
@@ -15,6 +15,10 @@
     font-size: 2rem;
     color: lighten($secondary, 20%);
   }
+  .review-content {
+    font-size: 0.9rem;
+    margin-top: 1rem;
+  }
   .review-author {
     text-align: right;
   }
