--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -15,10 +15,10 @@ $container-max-widths: (
 
 $grid-gutter-width: 20px;
 
-$white: #ffffff;
+$white: rgb(255, 255, 255);
 $black: rgb(51, 51, 51);
 $primary: rgb(11, 72, 107);
-$secondary: #43454d;
+$secondary: rgb(67, 69, 77);
 $cta: rgb(229, 148, 0);
 
 // Links
