--- a/layouts/partials/hero-image-fullscreen.html
+++ b/layouts/partials/hero-image-fullscreen.html
@@ -7,9 +7,11 @@
         <p>{{ .subheading }}</p>
       </div>
       <div class="hero-down">
-        <a href="#home">
+        <a href="#home" title="jump to content" aria-label="down chevron">
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="60" height="60">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 898.75 533.751" transform="matrix(.69 0 0 .69 15.5 15.5)" fill="#fff">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 898.75 533.751" transform="matrix(.69 0 0 .69 15.5 15.5)" fill="#fff" role="img" aria-describedby="home-title, home-desc">
+                <title id="home-title">jump to content</title>
+                <desc id="home-desc">down chevron</desc>
                 <path d="M224.687 309.061L0 84.372l42.186-42.186L84.372 0l182.815 182.811L450 365.622l182.5-182.496L815 .63l41.874 41.874L898.75 84.38 674.062 309.065 449.373 533.751 224.687 309.06z"/>
             </svg>
           </svg>
