--- a/layouts/partials/super-header.html
+++ b/layouts/partials/super-header.html
@@ -1,11 +1,13 @@
+<!--
 <div class="super-header">
   <div class="container">
     <div class="row">
       <div class="col-12">
         <div class="super-header-inner">
-          <small>Read about our <a href="/covid/">COVID-19 safety precautions</a>.</small>
+          <small></small>
         </div>
       </div>
     </div>
   </div>
 </div>
+-->
